# Domefy

./: -la  .gitignore  API.txt  CMakeLists.txt  IMPORTANT-NOTES-HOW-TO-COMPILE-CEF-EXAMPLE.txt  LICENSE.txt  NOTES.txt  Notes-Windows-Build.txt  README.md  THIRD-PARTY.txt  cmakesource.txt  go.sum  howtocefurho-from-scratch  qgit sq  tatus
GPUCache/: index
doc/: cmake_version.txt
include/: libLameNet.h
include/Urho3D/: Urho3D.h  librevision.h
include/Urho3D/Container/: Ptr.h
include/Urho3D/UI/: UI.h
include/common/ahm/net/: net.h
include/custom/windows32bit/: libLameNet.h
include/fractals/Urho3D/: Urho3D.h  Urho3DAll.h  librevision.h
include/fractals/Urho3D/AngelScript/: APITemplates.h
include/fractals/Urho3D/Graphics/: GraphicsDefs.h
include/fractals/Urho3D/Math/: MathDefs.h
include/fractals/Urho3D/Scene/: Node.h  Serializable.h
include/fractals/Urho3D/UI/: ListView.h  UIElement.h
include/ptr/net/: net.h
include/regular/Urho3D/: Urho3DAll.h
include/regular/Urho3D/Graphics/: Material.h
include/regular/Urho3D/Input/: InputEvents.h
include/regular/Urho3D/UI/: Cursor.h
lib/: LICENSE.txt  main-lamenet.c
lib/windows/: AHMNet.lib  SDL.lib  libLameNet.lib
misc/legacy_dependencies/: about.txt  mingw-w64-i686-libogg-1.3.4-3-any.pkg.tar.xz  mingw-w64-i686-libtheora-1.1.1-4-any.pkg.tar.xz  mingw-w64-i686-libvorbis-1.3.6-1-any.pkg.tar.xz
source/: AutoDetectServer.h  CMakeLists.txt  CharacterDemo.cpp  CharacterDemo.h  CodeEditor.cpp  CodeEditor.h  Context.cpp  Context.h  ControlInput.cpp  ControlInput.h  CoreParameters.h  Environment.cpp  Environment.h  FPMED.H  FpmedApp.cpp  FpmedApp.h  FpmedCore.cpp  FpmedCore.h  GrabbableUI.cpp  GrabbableUI.h  Main.cpp  MyCustomApplication.cpp  MyCustomApplication.h  Projector.cpp  Projector.h  ProjectorMachine.h  Sample.cpp  Sample.h  ScriptEditor.h  ServerMachine.cpp  ServerMachine.h  Slide.cpp  Slide.h  SlideAnimator.h  Slideshow.cpp  Slideshow.h  StereoHoloAnimator.cpp  StereoHoloAnimator.h  UBrowserImage.cpp  UBrowserImage.h  (+10 more)
source/Application/: ApplicationInterface.h  MyCustomApplication.cpp  MyCustomApplication.h  Sample.cpp  Sample.h
source/Application/Components/AnatomicViewer/: AnatomicViewer.cpp  AnatomicViewer.h
source/Application/Components/GrabbableUI/: GrabbableUI.cpp  GrabbableUI.h
source/Application/Components/Slide/: Slide.cpp  Slide.h
source/Application/Components/SlideAnimator/: SlideAnimator.cpp  SlideAnimator.h
source/Application/Components/SmoothVariation/: SmoothVariation.h
source/Application/Components/StereosHoloAnimator/: StereoHoloAnimator.cpp  StereoHoloAnimator.h
source/Application/Components/TVComponent/: LevelData.cpp  LevelData.h  TVComponent.cpp  TVComponent.h
source/Application/Components/VHP/: VHP.cpp  VHP.h
source/Application/Components/VirtualObject/: VirtualObject.cpp  VirtualObject.h
source/Application/Components/WebBrowser/: WebBrowser.cpp  WebBrowser.h
source/Application/Slide/: Slide.h  Slideshow.cpp  Slideshow.h
source/Application/SlideReader/: SlideReader.cpp  Slideshow.cpp  Slideshow.h
source/Application/WebBrowser/: CEFWebBrowser.cpp  CEFWebBrowser.h
source/Browser/: CEFWebBrowser.cpp  UCefApp.cpp  UCefApp.h
source/Core/: AutoDetectServer.cpp  AutoDetectServer.h  CoreParameters.h  Environment.cpp  Environment.h  FpmedCore.cpp  FpmedCore.h  ProgramConfig.cpp  ProgramConfig.h  Projector.cpp  Projector.h  ProjectorMachine.cpp  ProjectorMachine.h  ServerMachine.cpp  ServerMachine.h  auxiliarAppFuncs.cpp  auxiliarAppFuncs.h
source/Forms/: CodeEditor.cpp  CodeEditor.h  GUIWindows.h  ScriptEditor.cpp  dv_asset.h  fltk_window_example_template.cpp  fpmed_forms.h
source/Math/: vector2.h  vector3.h  vector4.h
source/cef_binary_3.2785.1466.g80e473e_windows32/cefsimple/: simple_app.cc  simple_handler.cc
tools/basic_image_tools-1.0/: license.txt
tools/basic_image_tools-1.0/Bleacher/ConvertImages/: ConvertImages.csproj  Form1.Designer.cs  Form1.cs  Form1.resx
tools/basic_image_tools-1.0/ConvertImages/: ConvertImages.sln
tools/basic_image_tools-1.0/ConvertImages/ConvertImages/: ConvertImages.csproj  Form1.Designer.cs  Form1.cs  Form1.resx
tools/basic_image_tools-1.0/Cropper/ConvertImages/: ConvertImages.csproj  Form1.Designer.cs  Form1.cs  Form1.resx
tools/basic_image_tools-1.0/MaterialMaker/ConvertImages/: ConvertImages.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
tools/calibrator/: calibrator.cbp  calibrator.depend  calibrator.layout  dv_asset.h  main.cpp
tools/calibrator (morfologic)/: calibrator.cbp  calibrator.depend  calibrator.layout  calibrator.sln  fltk_window_example_template.cpp
tools/calibrator (morfologic)/calibrator/: calibrator.vcxproj  calibrator.vcxproj.filters
tools/calibrator/calibrator/: calibrator.vcxproj  calibrator.vcxproj.filters
tools/lomake/: README.MD  lomake  main.go
tools/scripts/: convert_to_bmp.sh  convert_to_bmp24.sh  convert_to_muscle.sh  make_transparent.sh  resize_image.sh
tools/scripts/lmk/: main.go
tools/slide-indexer/: about.txt  main.go  slide-indexer
webserver/: config.toml  main.go
webserver/config/: config.go
webserver/frontwebapp/: main.html  webgl_loader_amf.html
webserver/frontwebapp/static/: 3dviewer.html  W3.CSS Template.html  calibrator.html  config.js  config.js.template  index.html  main.html  webgl_loader_amf.html
webserver/frontwebapp/static/W3.CSS Template_files/: slider94.css  w3.css
webserver/frontwebapp/static/calibrator/: calibrator.html  projector_positioner.html
webserver/frontwebapp/static/domefy/: utils.js
webserver/frontwebapp/static/misc/: 3dviewer.html
webserver/logger/: logger.go
webserver/middleware/: middleware.go
webserver/presets/: au28-ds4.json  aug28okds3.json  bom1.json  bom10.json  bom2.json  bom3.json  bom4.json  bom5.json  bom6.json  bom7.json  bom8.json  bom9.json  ds-1-3.json  ds-2-4.json  frontcal-temp.json  semi-decent.json
webserver/rest/: rest.go  rest_test.go
webserver/services/domefy/: domefy.go  linux_domefy.go  windows_domefy.go
webserver/services/stress/: stress.go  stress_test.go
(+24 files in other folders)
